<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/device_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".NodeDetailFragment_Shutter" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/gray"
                        android:padding="10dp"
                        android:text="@string/node_publication"
                        android:textColor="@color/blue"
                        android:textIsSelectable="false"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/node_title"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:background="@color/gray"
                        android:enabled="false"
                        android:gravity="right"
                        android:padding="10dp"
                        android:text="@string/name"
                        android:textColor="@color/lightgray"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/publication_switch"
                        android:textIsSelectable="false" />

                    <Switch
                        android:id="@+id/publication_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textOff="@string/no"
                        android:textOn="@string/yes" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <TextView
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:padding="10dp"
                    android:text="@string/node_info"
                    android:textColor="@color/blue"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textIsSelectable="false" />

                    <TextView
                        android:id="@+id/node_name"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" >

                    <TextView
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/manufacturer"
                        android:textIsSelectable="false" />

                    <TextView
                        android:id="@+id/node_manufacturer"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" >

                    <TextView
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textIsSelectable="false" />

                    <TextView
                        android:id="@+id/node_version"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="false" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <TextView
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"
                    android:padding="10dp"
                    android:text="@string/node_services"
                    android:textColor="@color/blue"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/service_1_name"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:textIsSelectable="false" />

                <TextView
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray"
                    android:padding="10dp"
                    android:text="@string/node_resources"
                    android:textColor="@color/blue"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/resource_1_name"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textIsSelectable="false" />

                    <SeekBar
                        android:id="@+id/level_seekBar"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:max="100"
                        android:progress="0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/resource_2_name"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textIsSelectable="false" />

                    <Switch
                        android:id="@+id/disengage_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:textOff="@string/no"
                        android:textOn="@string/yes" />

                </LinearLayout>
            </LinearLayout>

            
        </LinearLayout>
    </ScrollView>
</LinearLayout>